# rudder

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  RUDDER.md  package-lock.json  package.json  setup.sh  tsconfig.json
.libra/issues/2/: SPEC.md
assets/sounds/: NOTICE.md
cloud/: Dockerfile  README.md  fly.toml  package-lock.json  package.json
cloud/infra/: apprunner-service.json
cloud/src/: server.ts
cloud/worker/: Dockerfile  entrypoint.sh  package.json  supervisor.mjs
native/: Cargo.toml
native/src/: lib.rs  main.rs  pty_terminal.rs
site/: index.html  vercel.json
src/: agent-attention.ts  auth.ts  backends.ts  brain.ts  cloud.ts  codex-binary.ts  effort.ts  git.ts  index.ts  main.ts  migration.ts  models.ts  native-agents.ts  native-binary.ts  plan-mode.ts  repl.ts  run-manager.ts  state.ts  task-summary.ts  tmux-dashboard.tsx  tmux-state.ts  tmux.ts  tui.tsx  types.ts  util.ts  version-check.ts
tests/: jj-workspaces.test.mjs  rebase-first.test.mjs
